hyper/normal-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyper-deploy
  namespace: normal-k8s-dev

spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyper-scale-ops
  template:
    metadata:
      labels:
        app: hyper-scale-ops

    spec:
      containers:
        - name: normal-k8s-scale-ops
          image: mp30/hyper-ops:46
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
